--- a/bundle/manifests/appstudio.redhat.com_components.yaml
+++ b/bundle/manifests/appstudio.redhat.com_components.yaml
@@ -52,24 +52,15 @@ spec:
                 description: Application to add the component to
                 pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?$
                 type: string
-              build:
-                description: The build artifacts associated with the component
-                properties:
-                  containerImage:
-                    description: The container image that is created during the component
-                      build.
-                    type: string
-                required:
-                - containerImage
-                type: object
               componentName:
                 description: ComponentName is name of the component to be added to
                   the HASApplication
                 maxLength: 63
                 pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?$
                 type: string
-              context:
-                description: A relative path inside the git repo containing the component
+              containerImage:
+                description: The container image to build or create the component
+                  from
                 type: string
               env:
                 description: An array of environment variables to add to the component
@@ -176,6 +167,12 @@ spec:
                   - name
                   type: object
                 type: array
+              releaseStrategies:
+                description: List of references to ReleaseStrategies to use when releasing
+                  the component
+                items:
+                  type: string
+                type: array
               replicas:
                 description: The number of replicas to deploy the component with
                 type: integer
@@ -221,6 +218,10 @@ spec:
                   git:
                     description: Git Source for a Component
                     properties:
+                      context:
+                        description: A relative path inside the git repo containing
+                          the component
+                        type: string
                       devfileUrl:
                         description: If specified, the devfile at the URL will be
                           used for the component.
@@ -229,22 +230,16 @@ spec:
                         description: If specified, the dockerfile at the URL will
                           be used for the component.
                         type: string
+                      revision:
+                        description: Specify a branch/tag/commit id. If not specified,
+                          default is `main`/`master`.
+                        type: string
                       url:
                         description: If importing from git, the repository to create
                           the component from
                         type: string
                     required:
                     - url
-                    type: object
-                  image:
-                    description: Image Source for a Component
-                    properties:
-                      containerImage:
-                        description: If importing from git, container image to create
-                          the component from
-                        type: string
-                    required:
-                    - containerImage
                     type: object
                 type: object
               targetPort:
