--- a/config/crd/bases/appstudio.redhat.com_components.yaml
+++ b/config/crd/bases/appstudio.redhat.com_components.yaml
@@ -325,6 +325,10 @@ spec:
                   branch:
                     description: Branch is the branch used for the gitops repository
                     type: string
+                  commitID:
+                    description: CommitID is the most recent commit ID in the GitOps
+                      repository for this component
+                    type: string
                   context:
                     description: Context is the path within the gitops repository
                       used for the gitops resources
