--- a/config/kcp/apibinding_has.yaml
+++ b/config/kcp/apibinding_has.yaml
@@ -5,15 +5,12 @@ metadata:
 spec:
   reference:
     workspace:
-      path: ${KCP_WORKSPACE}
+      path: root:has
       exportName: appstudio-identity-has
   acceptedPermissionClaims:
-    - group: ""
-      resource: "secrets"
-      verbs: ["get", "list", "watch"]
-    - group: ""
-      resource: "configmaps"
-      verbs: ["get", "list", "watch"]
-    - group: "route.openshift.io"
-      resource: "routes"
-      verbs: ["get", "list", "watch"]
+      - group: ""
+        resource: "secrets"
+        verbs: ["get", "list", "watch"]
+      - group: ""
+        resource: "configmaps"
+        verbs: ["get", "list", "watch"]
