--- a/config/kcp/apiexport_has.yaml
+++ b/config/kcp/apiexport_has.yaml
@@ -4,7 +4,7 @@
 apiVersion: apis.kcp.dev/v1alpha1
 kind: APIExport
 metadata:
-  name: appstudio-identity-has
+  name: has
 spec:
   permissionClaims:
   - group: ""
@@ -13,14 +13,7 @@ spec:
   - group: ""
     resource: "configmaps"
     verbs: ["get", "list", "watch"]
-  - group: "route.openshift.io"
-    resource: "routes"
-    verbs: ["get", "list", "watch"]
   latestResourceSchemas:
-    - v202208231850.applicationpromotionruns.appstudio.redhat.com
-    - v202208231850.applicationsnapshotenvironmentbindings.appstudio.redhat.com
-    - v202208231850.applicationsnapshots.appstudio.redhat.com
-    - v202208231850.environments.appstudio.redhat.com
-    - v202208231850.applications.appstudio.redhat.com
-    - v202208231850.componentdetectionqueries.appstudio.redhat.com
-    - v202208231850.components.appstudio.redhat.com
+    - v202208241415.applications.appstudio.redhat.com
+    - v202208241415.componentdetectionqueries.appstudio.redhat.com
+    - v202208241415.components.appstudio.redhat.com
