--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -22,6 +22,9 @@ spec:
       labels:
         control-plane: controller-manager
     spec:
+      volumes:
+      - name: tmp-storage
+        emptyDir: {}
       securityContext:
         runAsNonRoot: true
       containers:
@@ -34,6 +37,7 @@ spec:
         name: manager
         securityContext:
           allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
         livenessProbe:
           httpGet:
             path: /healthz
@@ -90,5 +94,9 @@ spec:
               name: feature-flag-config
               key: ENVIRONMENT
               optional: true
+        volumeMounts:
+        - name: tmp-storage
+          mountPath: /tmp
+          readOnly: false
       serviceAccountName: controller-manager
       terminationGracePeriodSeconds: 10
