--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -121,6 +121,24 @@ jobs:
           fetch-depth: 0
       - name: Check if dockerimage build is working
         run: docker build -f ./Dockerfile .
+  build-cdq-analysis-image:
+    name: Check CDQ Analysis Image Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Set up Go 1.x
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.18
+      - name: Change to the cdq-analysis directory
+        run: cd cdq-analysis/
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2 
+      - name: Check if dockerimage build is working
+        run: docker build -f ./Dockerfile .
   pact:
     name: Pact tests
     runs-on: ubuntu-latest
@@ -172,3 +190,4 @@ jobs:
           PATH=${PATH}:$(pwd)/pactcli/pact/bin
           COMMIT_SHA=${COMMIT_SHA:0:7} 
           make pact
+
