--- a/codecov.yml
+++ b/codecov.yml
@@ -9,3 +9,13 @@ ignore:
   - "cdq-analysis/main.go" # entry point for cdq-analysis docker image
   - "pkg/github/mock.go" # mock file for testing
   - "pkg/github/token_moke.go" # mock file for testing
+coverage:
+    status:
+        # Allows coverage to drop by a 2% when compared against the base commit.
+        project:
+            default:
+                target: auto
+                threshold: 2%
+        patch:
+            default:
+                informational: true
