Ignore contract test files in Codecov
Those files are test only, and shouldn't be included in coverage calculations

--- a/codecov.yml
+++ b/codecov.yml
@@ -9,3 +9,4 @@ ignore:
   - "cdq-analysis/main.go" # entry point for cdq-analysis docker image
   - "pkg/github/mock.go" # mock file for testing
   - "pkg/github/token_moke.go" # mock file for testing
+  - "contracts/" # contract testing files
