Address PR feedback for func signature
Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

--- a/codecov.yml
+++ b/codecov.yml
@@ -5,7 +5,8 @@ ignore:
   - "controllers/start_test_env.go" # setup of a test environment for unit and Pact tests
   - "controllers/application_pact_test_state_handlers.go" # state handlers for the Pact tests
   - "controllers/application_pact_test_utils.go" # utils file for the Pact tests
-  - "cdq-analysis/pkg/detect_mock.go" # mock file for testing
+  - "cdq-analysis/pkg/detect_mock.go" # mock file for testing CDQ detection logic
+  - "cdq-analysis/pkg/mock.go" # mock file for CDQUtil interface methods
   - "cdq-analysis/main.go" # entry point for cdq-analysis docker image
   - "pkg/github/mock.go" # mock file for testing
   - "pkg/github/token_mock.go" # mock file for testing
