--- a/codecov.yml
+++ b/codecov.yml
@@ -1,6 +1,6 @@
 ignore:
   - "api/v1alpha1/zz_generated.deepcopy.go" # generated file, does not need to be included in the coverage
-  - "pkg/spi/spi_mock.go" # mock file for testing
+  - "pkg/spi/spi_mock.go" # mock file for SPI testing
   - "gitops/generate_mock.go" # mock file for testing
   - "controllers/start_test_env.go" # setup of a test environment for unit and Pact tests
   - "controllers/application_pact_test_state_handlers.go" # state handlers for the Pact tests
