--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Go 1.x
         uses: actions/setup-go@v2
         with:
-          go-version: 1.19
+          go-version: 1.21
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
         with:
@@ -60,7 +60,7 @@ jobs:
       - name: Check format
         run: |
           go install github.com/google/addlicense@latest
-          go install golang.org/x/tools/cmd/goimports@latest
+          go install golang.org/x/tools/cmd/goimports@v0.22.0
           git reset HEAD --hard
           make check_fmt
           if [[ $? != 0 ]]
@@ -71,7 +71,8 @@ jobs:
           fi
       - uses: dominikh/staticcheck-action@v1.3.0
         with:
-          version: "2022.1.3"
+          #version: "2022.1.3"
+          version: "latest"
           install-go: false
       - name: Check manifests
         run: |
