--- a/bundle/manifests/application-service.clusterserviceversion.yaml
+++ b/bundle/manifests/application-service.clusterserviceversion.yaml
@@ -276,7 +276,7 @@ spec:
                 - --logtostderr=true
                 - --v=10
                 - --http2-disable=true
-                image: gcr.io/kubebuilder/kube-rbac-proxy:v0.15.0
+                image: registry.redhat.io/openshift4/ose-kube-rbac-proxy-rhel9:v4.18
                 name: kube-rbac-proxy
                 ports:
                 - containerPort: 8443
